testing/invalid_semantic/compat/err17.java
class Main {
    static void run() {
        ifj16.print(5);
    }
}
